# 2dPacman

./: CMakeLists.txt  README.org  main.cpp
shaders/: ghosts.h  player.h
test2/: CMakeLists.txt  README.org
